--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "next": "16.0.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-masonry-css": "^1.0.16",
     "sharp": "^0.34.4",
     "tailwind-merge": "^2.5.0",
