--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
-    "next": "16.0.3",
+    "next": "^16.0.10",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-masonry-css": "^1.0.16",
